packages/next-swc/crates/core/tests/errors/next-ssg/static-paths-after-server-side/output.stderr
error: You can not use getStaticProps or getStaticPaths with getServerSideProps. To use SSG, please remove getServerSideProps
 --> input.js:2:10
  |
2 | export { getStaticPaths } from 'a'
  |          ^^^^^^^^^^^^^^

